[project]
name = "sam2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
]

[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.5.1",
    ]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sam2 = { workspace = true }

[dependency-groups]
dev = [
    "sam2",
]
