[project]
name = "sam2"
version = "0.1.0"
description = "SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "torch>=2.3.1",
    "torchvision==0.18.1",
    "hydra-core",
    "tqdm",

]

[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.5.1",
    ]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sam2 = { workspace = true }

[dependency-groups]
dev = [
    "sam2",
]
